--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
+	"dependencies": {
+		"@types/three": "^0.172.0",
+		"three": "^0.172.0"
+	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
