--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"dependencies": {
+		"@fontsource/shrikhand": "^5.1.1",
 		"@types/three": "^0.172.0",
 		"three": "^0.172.0"
 	},
