--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
 	},
 	"dependencies": {
 		"@fontsource/shrikhand": "^5.1.1",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@types/three": "^0.172.0",
 		"three": "^0.172.0"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
